--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -32,6 +32,7 @@ a::before,
 a::after,
 *:visited {
   text-decoration: none;
+  color: black;
 }
 
 img {
@@ -41,6 +42,7 @@ img {
 
 .title {
   margin-top: 2%;
+  margin-bottom: 2%;
   display: flex;
   align-items: center;
   justify-content: center;
