--- a/assets/styles/utils/_colors.scss
+++ b/assets/styles/utils/_colors.scss
@@ -1,6 +1,7 @@
 $body-bg: #151515;
 $contact-bg: #242424;
 $green: #4ee1a0;
+$green-bg: hsla(153, 71%, 59%, 0.727);
 $text-1: #ffffff;
 $text-2: #d9d9d9;
 $red: #ff6f5b;
