--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -137,7 +137,7 @@ import { Image } from "astro:assets";
 <script>
   import { Observer, type ObserverOption, randomNumber } from "../utils/utils";
 
-  const skill = document.querySelector(".visually-hidden") as HTMLDivElement;
+  const skill = document.querySelector(".skills__wrapper") as HTMLDivElement;
 
   const observerSkillOptions: ObserverOption = {
     actionOnAppear: () => {
