--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -155,6 +155,9 @@ import { Image } from "astro:assets";
       const skills = document.querySelectorAll(".skills__title");
       skills.forEach((sk) => sk.classList.remove("skills__title__appear"));
     },
+    options: {
+      threshold: 0.2,
+    },
   };
 
   new Observer(skill, observerSkillOptions).Run();
