--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import FrontPicture from "../images/me.jpg";
+import BackPicture from "../images/me-2.jpg";
 
 import Circle from "../images/circle.svg";
 import Arrow from "../images/arrow.svg";
@@ -38,6 +39,7 @@ const hobbies = [
           <Image src={FrontPicture} alt="photo of me" />
         </div>
         <div class="hero__picture__back">
+          <Image src={BackPicture} alt="photo of me" />
           <div class="hobbies">
             {
               hobbies.map((hobby) => (
@@ -50,16 +52,16 @@ const hobbies = [
             }
           </div>
           <div>
-            <p id="tool_tip">Practice badminton since 11 years.</p>
+            <p id="back__tool__tip">Practice badminton since 11 years.</p>
           </div>
-          <div class="description">
+          <div class="back__description">
             <p>
               I am currently studying in software engineering for a master's
               degree 🎓. I spend most of my free time creating personnal
-              projects and I really enjoy the open source mindset.
+              projects.
             </p>
           </div>
-          <div class="music">
+          <div class="back__music">
             <p>Song of the moment</p>
             <iframe
               style="border-radius: 12px"
@@ -198,6 +200,7 @@ const hobbies = [
           @media (min-width: px-to-rem(1280px)) {
             width: 348px;
             height: 656px;
+            border-radius: 5px 5px 0px 0px;
           }
         }
       }
@@ -222,6 +225,14 @@ const hobbies = [
 
         background-color: $body-bg;
 
+        img {
+          object-fit: cover;
+          width: 348px;
+          height: 240px;
+
+          border-radius: 5px 5px 0px 0px;
+        }
+
         .hobbies {
           display: flex;
           align-items: center;
@@ -242,17 +253,23 @@ const hobbies = [
           }
         }
 
-        #tool_tip {
+        #back__tool__tip {
           opacity: 0;
           font-size: $fs-24;
           transition: opacity 225ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
 
-        .description {
+        .back__description {
           padding: px-to-rem(5px);
           text-align: center;
 
           font-size: px-to-rem(10px);
+        }
+
+        .back__music {
+          p {
+            font-size: 1rem;
+          }
         }
       }
     }
@@ -303,7 +320,7 @@ const hobbies = [
 
 <script>
   const spans = document.querySelectorAll("span[data-tooltip]");
-  const toolTip = document.querySelector("#tool_tip") as HTMLParagraphElement;
+  const toolTip = document.querySelector("#back__tool__tip") as HTMLParagraphElement;
 
   spans.forEach((span) => {
     span.addEventListener("mouseover", () => {
