--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,13 +3,14 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Meteor from "../components/Meteor.astro";
 import Cursor from "../components/Cursor.astro";
+import Favicon from "../images/favicon.ico";
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href={Favicon} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gauron Dorian</title>
   </head>
