--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,9 @@
+---
+const year = new Date().getFullYear();
+---
+
 <footer class="footer">
-  <p>Gauron Dorian - 2023</p>
+  <p>Gauron Dorian - {year}</p>
 </footer>
 
 <style>
