--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="header">
   <nav class="header__nav">
-    <a href="">Gauron Dorian</a>
+    <a href="https://dorian-gauron.com">Gauron Dorian</a>
     <a href="https://github.com/Michelprogram" class="header__social">
       <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25">
         <path
