--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -1,34 +1,35 @@
 ---
+import {computeDateFromBeginning} from "../utils/utils";
 const skills = [
   {
     title: "HTML",
     icon: "https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Activities/Party%20Popper.png",
-    description: "3 Years Experience",
+    description: `${computeDateFromBeginning(new Date("01/01/2020"))} Years Experience`,
   },
   {
     title: "SASS",
     icon: "https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Activities/Crystal%20Ball.png",
-    description: "2 Years Experience",
+    description: `${computeDateFromBeginning(new Date("01/01/2021"))} Years Experience`,
   },
   {
     title: "Typescript",
     icon: "https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Objects/Pouring%20Liquid.png",
-    description: "1 Year Experience",
+    description: `${computeDateFromBeginning(new Date("01/01/2022"))} Years Experience`,
   },
   {
     title: "Golang",
     icon: "https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Animals/Bear.png",
-    description: "1 Year Experience",
+    description: `${computeDateFromBeginning(new Date("01/01/2022"))} Years Experience`,
   },
   {
     title: "Vue",
     icon: "https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Robot.png",
-    description: "2 Years Experience",
+    description: `${computeDateFromBeginning(new Date("01/01/2021"))} Years Experience`,
   },
   {
     title: "Docker",
     icon: "https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Animals/Spouting%20Whale.png",
-    description: "1 Year Experience",
+    description: `${computeDateFromBeginning(new Date("01/01/2022"))} Years Experience`,
   },
 ];
 
