--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Skill from "../components/Skill.astro";
-import Project from "../components/Project.astro";
+import Projects from "../components/projects/Projects.vue";
 ---
 
 <Layout>
   <main>
     <Hero />
     <Skill />
-    <Project />
+    <Projects />
   </main>
 </Layout>
